<resources>
    <string name="app_name">Campus Event Tracker</string>
    <string name="login_header">User Login</string>
    <string name="email_PH">School Email</string>
    <string name="password_PH">Password</string>
    <string name="btnLogin_text">Log In</string>
    <string name="btnRegister_text">Register</string>
    <string name="btnEventInfo_text">More Info</string>
    <string name="txtEventInfo_default">None</string>
    <string name="txtEventInfo_Name">Event Name:</string>
    <string name="txtEventInfo_Location">Location:</string>
    <string name="txtEventInfo_Description">Event Description:</string>
    <string name="txtEventInfo_Date">Start Date:</string>
    <string name="txtEventInfo_Time">Start Time:</string>
    <string name="txtEventInfo_EndTime">End Time:</string>
    <string name="txtEventInfo_EndDate">End Date:</string>
</resources>